# zk-fuzz-hunter

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml
fuzzer/: Cargo.toml
fuzzer/src/: config.rs  field.rs  fuzzer.rs  main.rs  r1cs.rs
